
	* lib/ocaml.cygclass (OCAML_SITEDIR): Fix for 3.10 and new findlib.
	(ocaml_install): Provide default ocamlfind-based install function.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/docbook.cygclass: New cygclass for DocBook SGML/DSSSL/XML/XSL.

	* lib/berkdb.cygclass: Code cleanup.
	(berkdb_compile): JAVA and friends defined by java.cygclass.
	(berkdb_install): Override emode, fmode, strip to minimize patches.
	(berkdb_postinst): Utilities vary per version, so auto-generate list.

	* bin/doexe: Install .la files with libtool.

	* data/mirrors (mirror_debian): Added.

	* CYGWIN-PATCHES/README:
	* configure.ac:
	Post-release version bump.

*** 0.3.7 ***

	* bin/make_managed_mount: Prefix PN to tarball name.

	* bin/doman:
	* bin/newman: Support Tcl .n manpages.

	* lib/apache2.cygclass (apache_compile): Accept APACHE_MOD_NAME.
	(doapacheconf): Append rather than overwrite.
	(apache_postinst): Automatically enter LoadModule commands to httpd.conf.

	* bin/cygport.in (__check_unstable): Added unstable API guard function.
	(__check_function): New function to check if function is defined.
	(__src_prep) [UNSTABLE]: Run src_unpack_hook in original source tree.
	(__show_version): Update license notice.

	* bin/prep_gnu_info.sh:
	Accept RESTRICT=postinst-info to not add install-info postinst command.

	* CYGWIN-PATCHES/README:
	* bin/Makefile.am:
	* bin/cygport.in (__prepetc):
	scrollkeeper has been replaced by rarian, and scrollkeeper-update
	is just a placeholder which does nothing.

	* lib/gtk2-perl.cygclass (gtk2_perl_compile): Support Gnome2-PanelApplet.

	* lib/php.cygclass: Overhaul to support both PECL and PEAR extensions.

	* lib/berkdb.cygclass (berkdb_install): Support db-4.6.
	(berkdb_postinst): Fix postinstall scripts.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/aspell-dict.cygclass: New cygclass for Aspell dictionaries.

	* bin/cygport.in (cygconf): Properly detect autoconf-2.6x configure.